added UI for no t3 app and basic stuff for modules

--- a/src/extension/views/devpanel.jade
+++ b/src/extension/views/devpanel.jade
@@ -4,7 +4,7 @@ html
     head
         meta(charset='UTF-8')
     title T3js DevTools
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.css')
 
-    body
-        p "Welcome to T3"
+    body(class='app')
         script(src='devpanel.bundle.js')
